Resolved overlapping issue

--- a/src/styles/layout/_slideoutMenu.scss
+++ b/src/styles/layout/_slideoutMenu.scss
@@ -6,6 +6,7 @@
   top: 45%;
   right: 0;
   transform: translateY(-45%);
+  z-index: 5000;
 
    &__ic-whatshot,
    &__ic-bookmark,
